# attestation-server-libkrun

./: Cargo.toml  Dockerfile  Makefile  README.md  extract-libkrunfw-from-image.sh  register-image-locally.sh  start-attestation-server-locally.sh  start-podman-krun-sev.sh  test-image-registration.sh
attester/: Cargo.toml  README.md
attester/src/: main.rs  vmsa.rs
build-libkrun-crun-sev/: Dockerfile  Dockerfile.centos  README.md
debug-container/: Dockerfile
demo/: README.md  cw-deploy.yaml  cw.yaml  demo.sh  nginx-deploy.yaml  pipeline.yaml  pvc-tekton.yaml  run-encrpyt-image-tkt-task.sh  run-register-image-tkt-task.sh  runtime-class.yaml
demo/nginx-demo/: Dockerfile  README.md  auth.conf  htpasswd  nginx.conf
encrypt-image/: Dockerfile  README.md  contact.txt  entrypoint.sh  sa.yaml  security-context.yaml  tekton-task.yaml
generate-libkrun-measurment/: Cargo.toml  Dockerfile  README.md
generate-libkrun-measurment/src/: main.rs
k8s-deployment/: attestation-server-deployment.yaml  attestation-service.yaml  pvc-image-repository.yaml  pvc.yaml
register-image/: Dockerfile  entrypoint.sh  tekton-task.yaml
src/: main.rs
verifier/: README.md  image-repo.json  test.json
