[package]
name = "attestation-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json"] }
# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
lazy_static = "1.4.0"
sha2 = "0.9.8"
byte_string = "1.0.0"
clap = "2"
